--- a/web/views/client/add.html
+++ b/web/views/client/add.html
@@ -8,7 +8,7 @@
                         <label class="col-sm-2 control-label" langtag="info-remark">备注</label>
                         <div class="col-sm-10">
                             <input class="form-control" type="text" name="remark"
-                                   placeholder="empty means to be unrestricted">
+                                   placeholder="remark">
                         </div>
                     </div>
 
