--- a/web/views/client/edit.html
+++ b/web/views/client/edit.html
@@ -9,7 +9,7 @@
                         <label class="col-sm-2 control-label" langtag="info-remark">备注</label>
                         <div class="col-sm-10">
                             <input class="form-control" value="{{.c.Remark}}" type="text" name="remark"
-                                   placeholder="empty means to be unrestricted">
+                                   placeholder="remark">
                         </div>
                     </div>
                     <div class="form-group" id="flow_limit">
