--- a/web/views/index/edit.html
+++ b/web/views/index/edit.html
@@ -28,7 +28,13 @@
                                    placeholder="empty means to be unrestricted">
                         </div>
                     </div>
-
+                    <div class="form-group" id="server_ip">
+                        <label class="col-sm-2 control-label" langtag="info-server-ip">服务端ip</label>
+                        <div class="col-sm-10">
+                            <input class="form-control" type="text" value="{{.t.ServerIp}}" name="server_ip"
+                                   placeholder="such as 0.0.0.0">
+                        </div>
+                    </div>
                     <div class="form-group" id="port">
                         <label class="col-sm-2 control-label" langtag="info-server-port">服务端端口</label>
                         <div class="col-sm-10">
