--- a/web/views/public/layout.html
+++ b/web/views/public/layout.html
@@ -38,7 +38,13 @@
                     {{/*<img alt="image" class="img-circle" src="/static/img/profile_small.jpg"/>*/}}
                     </span>
                         <a href="#">
-                            <span class="clear"> <span class="block m-t-xs"> <strong class="font-bold">admin</strong>
+                            <span class="clear"> <span class="block m-t-xs"> <strong class="font-bold">
+                            {{if eq true .isAdmin}}
+                                admin
+                            {{else}}
+                                user
+                            {{end}}
+                            </strong>
                              </span> <span class="text-muted text-xs block">system </span> </span>
                         </a>
                     </div>
@@ -46,7 +52,6 @@
                         NPS
                     </div>
                 </li>
-            {{if eq true .isAdmin}}
                 <li class="{{if eq "index" .menu}}active{{end}}">
                     <a href="/"><i class="fa fa-dashboard"></i> <span langtag="menu-dashboard"
                                                                       class="nav-label">仪表盘</span></a>
@@ -55,7 +60,6 @@
                     <a href="/client/list"><i class="fa fa-clipboard"></i> <span langtag="menu-client"
                                                                                  class="nav-label">客户端</span></a>
                 </li>
-            {{end}}
                 <li class="{{if eq "host" .menu}}active{{end}}">
                     <a href="/index/hostlist"><i class="fa fa-paperclip"></i> <span langtag="menu-host"
                                                                                     class="nav-label">域名解析</span></a>
