--- a/web/views/client/add.html
+++ b/web/views/client/add.html
@@ -60,6 +60,20 @@
                             <span class="help-block m-b-none">unique, non-filling will be generated automatically</span>
                         </div>
                     </div>
+                    <div class="form-group" id="web_username">
+                        <label class="control-label col-sm-2" langtag="info-client-web-username">web登陆用户名</label>
+                        <div class="col-sm-10">
+                            <input class="form-control" type="text" name="web_username"
+                                   placeholder="empty means to be unrestricted">
+                        </div>
+                    </div>
+                    <div class="form-group" id="web_password">
+                        <label class="control-label col-sm-2" langtag="info-client-web-password">web登陆密码</label>
+                        <div class="col-sm-10">
+                            <input class="form-control" type="text" name="web_password"
+                                   placeholder="empty means to be unrestricted">
+                        </div>
+                    </div>
                     <div class="form-group" id="config_conn_allow">
                         <label class="control-label col-sm-2" langtag="info-config-conn-allow">是否允许客户端以配置文件模式连接</label>
                         <div class="col-sm-10">
