--- a/web/views/index/hedit.html
+++ b/web/views/index/hedit.html
@@ -49,7 +49,7 @@
                         <textarea class="form-control" rows="4" type="text" name="target"
                                   placeholder="such as
 10.1.50.203:80
-10.1.50.202:80">{{.h.Target}}</textarea>
+10.1.50.202:80">{{.h.Target.TargetStr}}</textarea>
                             <span class="help-block m-b-none">Line break if load balancing</span>
 
                         </div>
@@ -74,7 +74,7 @@
                     <div class="form-group">
                         <div class="col-sm-4 col-sm-offset-2">
                             &nbsp;<button class="btn btn-success" href="#" id="add"><i
-                                class="fa fa-fw fa-lg fa-eye"></i>新增
+                                class="fa fa-fw fa-lg fa-eye"></i><span langtag="info-save">保存</span>
                         </button>
                         </div>
                     </div>
