--- a/web/views/index/list.html
+++ b/web/views/index/list.html
@@ -76,13 +76,11 @@
                 field: 'Id',//域值
                 title: 'id',//标题
                 visible: true,//false表示不显示
-                sortable: true,//启用排序
             },
             {
                 field: 'Id',//域值
                 title: 'client id',//标题
                 visible: true,//false表示不显示
-                sortable: true,//启用排序
                 formatter: function (value, row, index) {
                     return row.Client.Id
                 }
@@ -91,37 +89,36 @@
                 field: 'Remark',//域值
                 title: 'remark',//标题
                 visible: true,//false表示不显示
-                sortable: true,//启用排序
             },
             {
                 field: 'Mode',//域值
                 title: 'mode',//标题
                 visible: true,//false表示不显示
-                sortable: true,//启用排序
             },
             {
                 field: 'Port',//域值
                 title: 'port',//标题
                 visible: true,//false表示不显示
-                sortable: true,//启用排序
             },
             {
                 field: 'Target',//域值
                 title: 'target',//标题
                 visible: true,//false表示不显示
-                sortable: true,//启用排序
+                formatter: function (value, row, index) {
+                    return row.Target.TargetStr
+                }
             },
             {
                 field: 'Password',//域值
                 title: 'secret',//标题
                 visible: true,//false表示不显示
-                sortable: true,//启用排序
+                
             },
             {
                 field: 'Status',//域值
                 title: 'setting',//内容
                 visible: true,//false表示不显示
-                sortable: true,//启用排序
+                
                 formatter: function (value, row, index) {
                     if (value) {
                         return '<span class="badge badge-primary">open</span>'
@@ -134,7 +131,7 @@
                 field: 'RunStatus',//域值
                 title: 'run',//内容
                 visible: true,//false表示不显示
-                sortable: true,//启用排序
+                
                 formatter: function (value, row, index) {
                     if (value) {
                         return '<span class="badge badge-primary">open</span>'
@@ -147,7 +144,7 @@
                 field: '',//域值
                 title: 'client',//内容
                 visible: true,//false表示不显示
-                sortable: true,//启用排序
+                
                 formatter: function (value, row, index) {
                     if (row.Client.IsConnect) {
                         return '<span class="badge badge-primary">online</span>'
@@ -160,7 +157,7 @@
                 field: 'option',//域值
                 title: 'option',//内容
                 visible: true,//false表示不显示
-                sortable: true,//启用排序
+                
                 formatter: function (value, row, index) {
                     btn_group = '<div class="btn-group">'
                     btn = `<button onclick="del(` + row.Id + `)" class="btn-danger"><i class="fa fa-trash"></i></button><button onclick="edit(` + row.Id + `)" class="btn-primary"><i class="fa fa-edit"></i></button></div>`
