--- a/web/views/client/edit.html
+++ b/web/views/client/edit.html
@@ -54,12 +54,28 @@
                             <span class="help-block m-b-none">only socks5 , web, HTTP forward proxy </span>
                         </div>
                     </div>
+                {{if eq true .isAdmin}}
                     <div class="form-group" id="vkey">
                         <label class="control-label col-sm-2" langtag="info-client-vkey">客户端验证密钥</label>
                         <div class="col-sm-10">
                             <input class="form-control" value="{{.c.VerifyKey}}" type="text" name="vkey"
                                    placeholder="empty means to be unrestricted">
                             <span class="help-block m-b-none">unique, non-filling will be generated automatically</span>
+                        </div>
+                    </div>
+                {{end}}
+                    <div class="form-group" id="web_username">
+                        <label class="control-label col-sm-2" langtag="info-client-web-username">web登陆用户名</label>
+                        <div class="col-sm-10">
+                            <input class="form-control" value="{{.c.WebUserName}}" type="text" name="web_username"
+                                   placeholder="empty means to be unrestricted">
+                        </div>
+                    </div>
+                    <div class="form-group" id="web_password">
+                        <label class="control-label col-sm-2" langtag="info-client-web-password">web登陆密码</label>
+                        <div class="col-sm-10">
+                            <input class="form-control" value="{{.c.WebPassword}}" type="text" name="web_password"
+                                   placeholder="empty means to be unrestricted">
                         </div>
                     </div>
                     <div class="form-group" id="config_conn_allow">
@@ -93,7 +109,7 @@
                     <div class="form-group">
                         <div class="col-sm-4 col-sm-offset-2">
                             <button class="btn btn-success" href="#" id="add"><i
-                                    class="fa fa-fw fa-lg fa-eye"></i>新增
+                                    class="fa fa-fw fa-lg fa-eye"></i><span langtag="info-save">保存</span>
                             </button>
                         </div>
                     </div>
