--- a/web/views/index/hadd.html
+++ b/web/views/index/hadd.html
@@ -19,13 +19,29 @@
                     <div class="form-group" id="scheme">
                         <label class="control-label col-sm-2" langtag="info-scheme">协议类型</label>
                         <div class="col-sm-10">
-                            <select class="form-control" name="scheme">
+                            <select id="scheme_select" class="form-control" name="scheme">
                                 <option value="all">all</option>
                                 <option value="http">http</option>
                                 <option value="https">https</option>
                             </select>
                         </div>
                     </div>
+                {{if eq false .https_just_proxy}}
+                    <div class="form-group" id="cert_file">
+                        <label class="col-sm-2 control-label" langtag="info-https-cert">https cert file路径</label>
+                        <div class="col-sm-10">
+                            <input class="form-control" type="text" name="cert_file_path"
+                                   placeholder="empty means to be unrestricted">
+                        </div>
+                    </div>
+                    <div class="form-group" id="key_file">
+                        <label class="col-sm-2 control-label" langtag="info-https-key">https key file路径</label>
+                        <div class="col-sm-10">
+                            <input class="form-control" type="text" name="key_file_path"
+                                   placeholder="empty means to be unrestricted">
+                        </div>
+                    </div>
+                {{end}}
                     <div class="form-group">
                         <label class="col-sm-2 control-label" langtag="info-url-router">url路由</label>
                         <div class="col-sm-10">
@@ -60,7 +76,7 @@
                         </div>
 
                     </div>
-                    <div class="form-group" id="hostchange" >
+                    <div class="form-group" id="hostchange">
                         <label class="col-sm-2 control-label" langtag="info-host-change">request host修改</label>
                         <div class="col-sm-10">
                             <input class="form-control" value="" type="text" name="hostchange"
@@ -94,6 +110,15 @@
                     }
                 }
             })
+        })
+        $("#scheme_select").on("change", function () {
+            if ($("#scheme_select").val() == "all" || $("#scheme_select").val() == "https") {
+                $("#cert_file").css("display", "block")
+                $("#key_file").css("display", "block")
+            } else {
+                $("#cert_file").css("display", "none")
+                $("#key_file").css("display", "none")
+            }
         })
     })
 </script>
