--- a/web/views/client/edit.html
+++ b/web/views/client/edit.html
@@ -13,6 +13,7 @@
                         </div>
                     </div>
                 {{if eq true .isAdmin}}
+                {{if eq true .allow_flow_limit}}
                     <div class="form-group" id="flow_limit">
                         <label class="col-sm-2 control-label" langtag="info-flow-limit">流量限制</label>
                         <div class="col-sm-10">
@@ -21,6 +22,8 @@
                             <span class="help-block m-b-none">unit: M</span>
                         </div>
                     </div>
+                {{end}}
+                {{if eq true .allow_rate_limit}}
 
                     <div class="form-group" id="rate_limit">
                         <label class="control-label col-sm-2" langtag="info-bandwidth">带宽限制</label>
@@ -30,6 +33,9 @@
                             <span class="help-block m-b-none">unit: KB/S</span>
                         </div>
                     </div>
+                {{end}}
+                {{if eq true .allow_connection_num_limit}}
+
                     <div class="form-group" id="max_conn">
                         <label class="control-label col-sm-2" langtag="info-max-conn-num">客户端最大连接数</label>
                         <div class="col-sm-10">
@@ -37,6 +43,7 @@
                                    placeholder="empty means to be unrestricted">
                         </div>
                     </div>
+                {{end}}
                 {{end}}
                     <div class="form-group" id="u">
                         <label class="control-label col-sm-2" langtag="info-web-auth-username">basic权限认证用户名</label>
